Different color scheme. Also a specific color for unselected items.

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -12,6 +12,8 @@ var cursor_trans=[0,0,0];
 var myVarNames = [];
 var myVarValues = [];
 var colors = {selected:[0.6,0.5,0.2]};
+// var myVarValues = [];
+var colors = {selected:[0.6,0.5,0.2],unselected:[124/256,153/256,96/255],limegreen:[122/256,182/256,69/255]};
 
 var inputFields = [];
 var inputFieldValues = [];
