Fixed loading bug. Sometimes jquery-ui wouldn't load in the right order. This prevented the app from loading/running at all.

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -38,6 +38,8 @@ if(typeof urlLang !='string' || urlLang == '')
 </script>
   <script type="text/javascript" src="/translations.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+
   <script type="text/javascript" src="lib/blockly/blockly_compressed.js"></script>
   <script type="text/javascript" src="assets/js/history.js"></script><!-- Undo/Redo -->
   <script type="text/javascript" src="assets/js/cli.js"></script><!-- Undo/Redo -->
