--- a/public/app/index.html
+++ b/public/app/index.html
@@ -88,9 +88,9 @@ function init() {
   });
   if(urlLang != '') $("#langDropdown").val(urlLang);
 
-  $("#blockly").draggable({ handle: "h5" });
+  $("#blockly,#inputModal").draggable({ handle: "h5" });
   // $("#blockly").css({ top: $(window).height() - $("#blockly").height() });
-  $("#blockly h5").css({ cursor: "hand" });
+  $("#blockly h5,#inputModal h5").css({ cursor: "hand" });
   $('#qsResults').css({left: $('#quickSearchDiv').position().left,'min-width': $('#quickSearchDiv').width()}
     );
   // var toolbox = '<xml>';
@@ -120,6 +120,7 @@ function init() {
   /*$('#inputPane').hide();
     createBlockAtCursor('<xml><block type="shape_sphere" inline="true" x="2" y="-4"><value name="radius"><block type="input_field_slider"><title name="uuid">947be554-7cb9-9736-b2b3-e14c9c4000a2</title><title name="sliderType">horSlider</title><title name="sliderLabel">Sphere size:</title><title name="minVal">30</title><title name="maxVal">150</title><title name="stepIncrement">15</title></block></value></block><block type="cursor_rotate" inline="true" x="1" y="77"><title name="NAME">rotateBy</title><value name="rZ"><block type="input_field_slider"><title name="uuid">2666d1a4-9540-671c-c566-2b056a085ae4</title><title name="sliderType">horSlider</title><title name="sliderLabel">Angle:</title><title name="minVal">0</title><title name="maxVal">360</title><title name="stepIncrement">45</title></block></value><next><block type="shape_cube" inline="true"><title name="CENTEROBJECT">TRUE</title><value name="width"><block type="math_number"><title name="NUM">100</title></block></value><next><block type="cursor_move" inline="true"><title name="NAME">moveBy</title><value name="tX"><block type="math_number"><title name="NUM">50</title></block></value><next><block type="shape_cylinder" inline="true"></block></next></block></next></block></next></block></xml>');
 */
+$('#inputPane').hide();
     myUpdateFunction();
     $('div.ui-dialog a.ui-dialog-titlebar-close').click();// close all other windows.
   }, 1500);
@@ -154,6 +155,14 @@ function myUpdateFunction() {
             }
         }    
   }
+  allFields = inputManager.list();
+  $('#inputPane').show();
+  if(allFields.length > 0) {
+      $('#inputModal').show();
+  } else {
+      $('#inputModal').hide();
+  }
+
 
   if(typeof hist !='undefined') hist.addEntry(xml);
 
@@ -435,7 +444,10 @@ $(window).resize(function() {
       left: 287px;
 
       position: absolute;}
-    #blockly.modal {}
+
+    #inputModal {top:350px;width: 380px;height: 180px;
+      left: 287px;
+      position: absolute;}
     h1 {
       font-weight: normal;
       font-size: 140%;
@@ -507,15 +519,14 @@ $(window).resize(function() {
         </select>
 
   <div id="blockly" class="modal">
-  <table>
+  <table style="width:100%">
     <tr>
       <td><h5><b>Drag-and-Drop 3D Design</b></h5></td>
       <td><div id="quickSearchDiv"><input type="text" style="color: grey;" title="Quick commands (/)" value="Quick commands (/)" autocomplete="off" onfocus="if(this.value=='Quick commands (/)'){this.value='';$(this).css('color','black');}" onblur="if(this.value==''){this.value='Quick commands (/)';$(this).css('color','grey');}"></div><div id="qsResults"></div></td>
-      <td><a href="#" title="close" onclick="$('#blockly').hide();">x</a></td>
+      <td style="padding: 3px; text-align: right;"><a href="#" title="close" onclick="$('#blockly').hide();">x</a></td>
     </tr>
   </table>
 
-  <embed id="inputPane" src="assets/plane.svg" height=90 width=600 type="image/svg+xml"/>
   <div id="svgDiv" style="width: 100%"></div>
   <textarea id="codearea" rows=10 style="width:500px" class="hide"></textarea>
   <table><tr><td>
@@ -532,5 +543,15 @@ $(window).resize(function() {
   <input type="button" onclick="saveCode();" value="Save!">
   <input type="button" onclick="loadCode();" value="Load!"><label></td><td><input type="checkbox" onclick="changeAutoSave(this.checked);" value="1" checked> Autosave</label></td></tr></table>
 </div>
+<div id="inputModal" class="modal hide">
+<table style="width:100%">
+    <tr>
+      <td><h5><b>Inputs</b></h5></td>
+      <td style="padding: 3px;text-align: right;"><a href="#" title="close" onclick="$('#inputModal').hide();">x</a></td>
+    </tr>
+  </table>
+  <embed id="inputPane" src="assets/plane.svg" height=140 width=380 type="image/svg+xml"/>
+</div>
+
 </body>
 </html>
