--- a/public/app/index.html
+++ b/public/app/index.html
@@ -121,8 +121,10 @@ function init() {
     createBlockAtCursor('<xml><block type="shape_sphere" inline="true" x="2" y="-4"><value name="radius"><block type="input_field_slider"><title name="uuid">947be554-7cb9-9736-b2b3-e14c9c4000a2</title><title name="sliderType">horSlider</title><title name="sliderLabel">Sphere size:</title><title name="minVal">30</title><title name="maxVal">150</title><title name="stepIncrement">15</title></block></value></block><block type="cursor_rotate" inline="true" x="1" y="77"><title name="NAME">rotateBy</title><value name="rZ"><block type="input_field_slider"><title name="uuid">2666d1a4-9540-671c-c566-2b056a085ae4</title><title name="sliderType">horSlider</title><title name="sliderLabel">Angle:</title><title name="minVal">0</title><title name="maxVal">360</title><title name="stepIncrement">45</title></block></value><next><block type="shape_cube" inline="true"><title name="CENTEROBJECT">TRUE</title><value name="width"><block type="math_number"><title name="NUM">100</title></block></value><next><block type="cursor_move" inline="true"><title name="NAME">moveBy</title><value name="tX"><block type="math_number"><title name="NUM">50</title></block></value><next><block type="shape_cylinder" inline="true"></block></next></block></next></block></next></block></xml>');
 */
 $('#inputPane').hide();
-    createBlockAtCursor('<xml><block type="assembly_part" x="-23" y="-7"><title name="PARTNAME">Ring</title><title name="booleanType">difference</title><statement name="SHAPESADD"><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="math_arithmetic" inline="true"><title name="OP">ADD</title><value name="A"><block type="math_arithmetic" inline="true"><title name="OP">MULTIPLY</title><value name="A"><block type="input_field_slider"><title name="uuid">ad6afb2d-058f-8d51-ae1c-d542da1d5550</title><title name="sliderType">horSlider</title><title name="sliderLabel">Thickness:</title><title name="minVal">1</title><title name="maxVal">6</title><title name="stepIncrement">0.1</title></block></value><value name="B"><block type="math_number"><title name="NUM">2</title></block></value></block></value><value name="B"><block type="input_field_slider"><title name="uuid">be235213-c475-1688-d7b4-1130ce2350c4</title><title name="sliderType">horSlider</title><title name="sliderLabel">Input 1:</title><title name="minVal">0</title><title name="maxVal">20</title><title name="stepIncrement">1</title></block></value></block></value><value name="height"><block type="input_field_slider"><title name="uuid">fdf1de71-6255-447b-030d-ffe3adf49882</title><title name="sliderType">horSlider</title><title name="sliderLabel">Height:</title><title name="minVal">1</title><title name="maxVal">10</title><title name="stepIncrement">0.5</title></block></value></block></statement><statement name="SHAPESREMOVE"><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="input_field_slider"><title name="uuid">be235213-c475-1688-d7b4-1130ce2350c4</title><title name="sliderType">horSlider</title><title name="sliderLabel">Size (mm):</title><title name="minVal">10</title><title name="maxVal">30</title><title name="stepIncrement">1</title></block></value><value name="height"><block type="math_number"><title name="NUM">10</title></block></value></block></statement></block></xml>');
 
+    // createBlockAtCursor('<xml><block type="assembly_part" x="-23" y="-7"><title name="PARTNAME">Ring</title><title name="booleanType">difference</title><statement name="SHAPESADD"><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="math_arithmetic" inline="true"><title name="OP">ADD</title><value name="A"><block type="math_arithmetic" inline="true"><title name="OP">MULTIPLY</title><value name="A"><block type="input_field_slider"><title name="uuid">ad6afb2d-058f-8d51-ae1c-d542da1d5550</title><title name="sliderType">horSlider</title><title name="sliderLabel">Thickness:</title><title name="minVal">1</title><title name="maxVal">6</title><title name="stepIncrement">0.1</title></block></value><value name="B"><block type="math_number"><title name="NUM">2</title></block></value></block></value><value name="B"><block type="input_field_slider"><title name="uuid">be235213-c475-1688-d7b4-1130ce2350c4</title><title name="sliderType">horSlider</title><title name="sliderLabel">Input 1:</title><title name="minVal">0</title><title name="maxVal">20</title><title name="stepIncrement">1</title></block></value></block></value><value name="height"><block type="input_field_slider"><title name="uuid">fdf1de71-6255-447b-030d-ffe3adf49882</title><title name="sliderType">horSlider</title><title name="sliderLabel">Height:</title><title name="minVal">1</title><title name="maxVal">10</title><title name="stepIncrement">0.5</title></block></value></block></statement><statement name="SHAPESREMOVE"><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="input_field_slider"><title name="uuid">be235213-c475-1688-d7b4-1130ce2350c4</title><title name="sliderType">horSlider</title><title name="sliderLabel">Size (mm):</title><title name="minVal">10</title><title name="maxVal">30</title><title name="stepIncrement">1</title></block></value><value name="height"><block type="math_number"><title name="NUM">10</title></block></value></block></statement></block></xml>');
+
+//<xml><block type="assembly_part" x="-11" y="-1"><title name="PARTNAME">Ring</title><title name="booleanType">difference</title><statement name="SHAPESADD"><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="math_arithmetic" inline="true"><title name="OP">ADD</title><value name="A"><block type="math_arithmetic" inline="true"><title name="OP">MULTIPLY</title><value name="A"><block type="input_field_slider"><title name="uuid">ad6afb2d-058f-8d51-ae1c-d542da1d5550</title><title name="sliderType">horSlider</title><title name="sliderLabel">Thickness:</title><title name="minVal">1</title><title name="maxVal">6</title><title name="stepIncrement">0.1</title></block></value><value name="B"><block type="math_number"><title name="NUM">2</title></block></value></block></value><value name="B"><block type="input_field_slider"><title name="uuid">be235213-c475-1688-d7b4-1130ce2350c4</title><title name="sliderType">horSlider</title><title name="sliderLabel">Input 1:</title><title name="minVal">0</title><title name="maxVal">20</title><title name="stepIncrement">1</title></block></value></block></value><value name="height"><block type="math_number"><title name="NUM">15</title></block></value><next><block type="cursor_move" inline="true"><title name="NAME">moveBy</title><value name="tX"><block type="math_number"><title name="NUM">10.5</title></block></value><value name="tY"><block type="math_number"><title name="NUM">-4</title></block></value><value name="tZ"><block type="math_number"><title name="NUM">0</title></block></value><next><block type="shape_cube" inline="true"><title name="CENTEROBJECT">FALSE</title><value name="width"><block type="math_number"><title name="NUM">20</title></block></value><value name="depth"><block type="math_number"><title name="NUM">8</title></block></value><value name="height"><block type="math_number"><title name="NUM">15</title></block></value><next><block type="cursor_move" inline="true"><title name="NAME">moveTo</title></block></next></block></next></block></next></block></statement><statement name="SHAPESREMOVE"><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="input_field_slider"><title name="uuid">be235213-c475-1688-d7b4-1130ce2350c4</title><title name="sliderType">horSlider</title><title name="sliderLabel">Size (mm):</title><title name="minVal">10</title><title name="maxVal">30</title><title name="stepIncrement">1</title></block></value><value name="height"><block type="math_number"><title name="NUM">16</title></block></value><next><block type="cursor_move" inline="true"><title name="NAME">moveBy</title><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><value name="tY"><block type="math_number"><title name="NUM">-1</title></block></value><value name="tZ"><block type="math_number"><title name="NUM">0</title></block></value><next><block type="shape_cube" inline="true"><title name="CENTEROBJECT">FALSE</title><value name="width"><block type="math_number"><title name="NUM">42</title></block></value><value name="depth"><block type="math_number"><title name="NUM">2</title></block></value><value name="height"><block type="math_number"><title name="NUM">15</title></block></value><next><block type="cursor_move" inline="true"><title name="NAME">moveBy</title><value name="tX"><block type="math_number"><title name="NUM">15</title></block></value><value name="tY"><block type="math_number"><title name="NUM">7.5</title></block></value><value name="tZ"><block type="math_number"><title name="NUM">-10</title></block></value><next><block type="cursor_rotate" inline="true"><title name="NAME">rotateBy</title><value name="rX"><block type="math_number"><title name="NUM">90</title></block></value><next><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="math_number"><title name="NUM">3</title></block></value><value name="height"><block type="math_number"><title name="NUM">30</title></block></value></block></next></block></next></block></next></block></next></block></next></block></statement><next><block type="cursor_rotate" inline="true"><title name="NAME">rotateTo</title><next><block type="cursor_move" inline="true"><title name="NAME">moveTo</title><value name="tX"><block type="math_number"><title name="NUM">-16</title></block></value><value name="tZ"><block type="math_number"><title name="NUM">7.5</title></block></value></block></next></block></next></block><block type="assembly_part" x="-152" y="606"><title name="PARTNAME">Part name 1</title><title name="booleanType">difference</title><statement name="SHAPESADD"><block type="shape_cube" inline="true"><title name="CENTEROBJECT">TRUE</title><value name="width"><block type="math_number"><title name="NUM">6</title></block></value><value name="depth"><block type="math_number"><title name="NUM">76</title></block></value><value name="height"><block type="math_number"><title name="NUM">15</title></block></value></block></statement><statement name="SHAPESREMOVE"><block type="cursor_move" inline="true"><title name="NAME">moveTo</title><value name="tX"><block type="math_number"><title name="NUM">7.5</title></block></value><value name="tY"><block type="math_number"><title name="NUM">30</title></block></value><next><block type="cursor_rotate" inline="true"><title name="NAME">rotateBy</title><value name="rY"><block type="math_number"><title name="NUM">-90</title></block></value><next><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="math_number"><title name="NUM">3</title></block></value><value name="height"><block type="math_number"><title name="NUM">30</title></block></value><next><block type="cursor_move" inline="true"><title name="NAME">moveTo</title><value name="tX"><block type="math_number"><title name="NUM">7.5</title></block></value><value name="tY"><block type="math_number"><title name="NUM">-30</title></block></value><next><block type="shape_cylinder" inline="true"><value name="diameter1"><block type="math_number"><title name="NUM">3</title></block></value><value name="height"><block type="math_number"><title name="NUM">30</title></block></value></block></next></block></next></block></next></block></next></block></statement></block></xml>
 
     myUpdateFunction();
     $('div.ui-dialog a.ui-dialog-titlebar-close').click();// close all other windows.
@@ -132,7 +134,7 @@ $('#inputPane').hide();
 
 } // end of function init
 
-function createBlockAtCursor(xmlStr){
+function createBlockAtCursorOld(xmlStr){
   try {
     var xml = Blockly.Xml.textToDom(xmlStr);      
     console.log(Blockly.Xml.domToWorkspace(Blockly.mainWorkspace, xml));
@@ -141,6 +143,133 @@ function createBlockAtCursor(xmlStr){
   }
 }
 
+function createBlockAtCursor(xmlStr){
+// create block after selection and select that block
+// when empty, just paste block:
+  if(Blockly.mainWorkspace.getTopBlocks().length == 0)
+  {
+    try {
+      var xml = Blockly.Xml.textToDom(xmlStr);      
+      Blockly.Xml.domToWorkspace(Blockly.mainWorkspace, xml);
+      Blockly.mainWorkspace.getTopBlocks()[0].select();
+    } catch(err){
+
+    }  
+    return;
+  }
+// 1. find selection
+console.log('createBlockAtCursor('+xmlStr+')');
+  var dom = Blockly.Xml.textToDom(xmlStr);
+  var domChild = dom.childNodes[0];
+  // domChild.setAttribute('x', 0);
+  // domChild.setAttribute('y', 0);
+
+  var selectedBlock = Blockly.selected;
+  console.log('pre paste');
+  //Blockly.selected.workspace.paste(domChild);
+  Blockly.mainWorkspace.paste(domChild);
+  console.log('after paste');
+
+  if(selectedBlock !== null)
+  {
+    // xmlStr = '<xml><block type="polygons_extrude" inline="true" x="-10" y="16"><value name="extrudeZ"><block type="math_number"><title name="NUM">20</title></block></value><statement name="shapeToExtrude"><block type="polygons_polygon"><title name="polyName">polyline</title><statement name="pointList"><block type="polygons_point" inline="true"><next><block type="polygons_point" inline="true"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><next><block type="polygons_point" inline="true"><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block></next></block></next></block></statement></block></statement></block></xml>';
+    // xmlStr = '<xml><block type="shape_sphere" inline="true" x="21" y="-15"><value name="radius"><block type="math_number"><title name="NUM">10</title></block></value><next><block type="shape_sphere" inline="true"><value name="radius"><block type="math_number"><title name="NUM">20</title></block></value></block></next></block></xml>';
+    // xmlStr = '<xml><block type="shape_sphere" inline="true" x="0" y="0"></block></xml>';
+    console.log('reverseSearch',reverseSearch);
+    var topBlocks = Blockly.mainWorkspace.getTopBlocks();
+    if(reverseSearch == false) {
+      if(topBlocks.length > 1) {
+        var lastBlockAdded = topBlocks[topBlocks.length-1];
+        if(selectedBlock.nextConnection.targetConnection === null) {
+          selectedBlock.nextConnection.connect(lastBlockAdded.previousConnection);
+        } else {
+          console.log("w000t.... complicated stuff.");
+          var secondUpperConnection = selectedBlock.nextConnection.targetConnection;
+          secondUpperConnection.disconnect();
+          selectedBlock.nextConnection.connect(lastBlockAdded.previousConnection);
+          lastBlockAdded.nextConnection.connect(secondUpperConnection);
+          Blockly.fireUiEvent(window, 'resize');
+        }
+      }
+    } else {
+      if(topBlocks.length > 1) {
+        var lastBlockAdded = topBlocks[topBlocks.length-1];
+        if(selectedBlock.nextConnection.targetConnection === null) {
+          selectedBlock.previousConnection.connect(lastBlockAdded.nextConnection);
+        } else {
+          console.log("w000t.... complicated stuff.");
+          // var secondUpperConnection = selectedBlock.nextConnection.targetConnection;
+          // secondUpperConnection.disconnect();
+          // selectedBlock.nextConnection.connect(lastBlockAdded.previousConnection);
+          // lastBlockAdded.nextConnection.connect(secondUpperConnection);
+          // Blockly.fireUiEvent(window, 'resize');
+        }
+      }
+    }
+
+
+// Blockly.mainWorkspace.getTopBlocks()[0].nextConnection.connect(Blockly.mainWorkspace.getTopBlocks()[1].previousConnection)
+  // console.log(dom,domChild);
+  // // Blockly.selected.workspace.paste(domChild);
+  // var workspaceDom = Blockly.Xml.workspaceToDom(Blockly.mainWorkspace);
+  // //workspaceDom.appendChild(domChild);
+  // var nextBlock = document.createElement("next");
+  // nextBlock.appendChild(domChild);
+  // // nextBlock;
+  // // var lastEl = workspaceDom;
+  // var repeatChildStr = '';
+  // var repeatChildStr2 = '';
+  // var evalStr = 'workspaceDom.lastChild.tagName == "BLOCK";';
+  // var n = 0;
+  // while(eval(evalStr)) {
+  //   n++;
+  //   repeatChildStr += '.lastChild.lastChild';
+  //   evalStr = 'workspaceDom.lastChild'+repeatChildStr+'.tagName == "BLOCK";';
+  //   if(eval(evalStr) == false) {
+  //     console.log('false === ',evalStr);
+  //     evalStr = 'workspaceDom.lastChild'+repeatChildStr2+'.appendChild(nextBlock);';
+  //     console.log(evalStr);
+  //     eval(evalStr);
+  //     break;
+  //   }
+  //   repeatChildStr2 += '.lastChild.lastChild';
+  //   console.log('next eval: ',evalStr);
+  // }
+
+  // //evalStr = 'workspaceDom.lastChild.lastChild.lastChild.tagName == "BLOCK";';
+  // console.log(eval(evalStr));
+  // while(lastEl.getElementsByTagName('next').length !== 0) { // if there's a next element
+  //   console.log('pre',lastEl);
+  //   lastEl = lastEl.lastChild.lastChild;
+  //   // lastEl = lastEl.lastChild.getElementsByTagName('next')[0].lastChild;
+  // }
+  // lastEl.appendChild(nextBlock);
+  // console.log('post, lastEl: ',lastEl,'workspaceDom',workspaceDom);
+  // lastEl.lastChild.getElementsByTagName('next')[0].lastChild.appendChild(nextBlock);
+  //workspaceDom.lastChild.appendChild(nextBlock);
+  // workspaceDom;
+  // console.log(workspaceDom);
+  // Blockly.mainWorkspace.clear();
+  // Blockly.Xml.domToWorkspace(Blockly.mainWorkspace,lastEl);
+}
+// 2a inject as child of selection
+// 2b inject as child of root? / or  or at cursor?
+// 
+// var xmlBlock = Blockly.Xml.blockToDom_(block);
+// xmlBlock.setAttribute('y', xy.y); 
+// Blockly.mainWorkspace.paste(xmlBlock);
+// 3. select the next block:
+  // Blockly.mainWorkspace.getTopBlocks()[0].getChildren()[0].select()
+  // curXML = getXML();
+  //Paste the provided block onto the workspace.
+  // try {
+    // var xml = Blockly.Xml.textToDom(xmlStr);      
+    // console.log(Blockly.Xml.domToWorkspace(Blockly.mainWorkspace, xml));
+  // } catch(err){
+// 
+  // }
+  // Blockly.mainWorkspace.paste(xmlStr);
+}
 
 var numUpdates = 0;
 function myUpdateFunction() {
