--- a/public/app/index.html
+++ b/public/app/index.html
@@ -175,7 +175,6 @@ console.log('createBlockAtCursor('+xmlStr+')');
     // xmlStr = '<xml><block type="polygons_extrude" inline="true" x="-10" y="16"><value name="extrudeZ"><block type="math_number"><title name="NUM">20</title></block></value><statement name="shapeToExtrude"><block type="polygons_polygon"><title name="polyName">polyline</title><statement name="pointList"><block type="polygons_point" inline="true"><next><block type="polygons_point" inline="true"><value name="tX"><block type="math_number"><title name="NUM">10</title></block></value><next><block type="polygons_point" inline="true"><value name="tY"><block type="math_number"><title name="NUM">10</title></block></value></block></next></block></next></block></statement></block></statement></block></xml>';
     // xmlStr = '<xml><block type="shape_sphere" inline="true" x="21" y="-15"><value name="radius"><block type="math_number"><title name="NUM">10</title></block></value><next><block type="shape_sphere" inline="true"><value name="radius"><block type="math_number"><title name="NUM">20</title></block></value></block></next></block></xml>';
     // xmlStr = '<xml><block type="shape_sphere" inline="true" x="0" y="0"></block></xml>';
-    console.log('reverseSearch',reverseSearch);
     var topBlocks = Blockly.mainWorkspace.getTopBlocks();
     if(reverseSearch == false) {
       if(topBlocks.length > 1) {
@@ -184,20 +183,23 @@ console.log('createBlockAtCursor('+xmlStr+')');
           selectedBlock.nextConnection.connect(lastBlockAdded.previousConnection);
         } else {
           console.log("w000t.... complicated stuff.");
+          return;
           var secondUpperConnection = selectedBlock.nextConnection.targetConnection;
           secondUpperConnection.disconnect();
           selectedBlock.nextConnection.connect(lastBlockAdded.previousConnection);
-          lastBlockAdded.nextConnection.connect(secondUpperConnection);
+          // lastBlockAdded.nextConnection.connect(secondUpperConnection);
           Blockly.fireUiEvent(window, 'resize');
         }
       }
     } else {
+      console.log('reverseSearch',reverseSearch);
       if(topBlocks.length > 1) {
         var lastBlockAdded = topBlocks[topBlocks.length-1];
-        if(selectedBlock.nextConnection.targetConnection === null) {
+        if(selectedBlock.previousConnection.targetConnection === null) {
           selectedBlock.previousConnection.connect(lastBlockAdded.nextConnection);
         } else {
           console.log("w000t.... complicated stuff.");
+          return;
           // var secondUpperConnection = selectedBlock.nextConnection.targetConnection;
           // secondUpperConnection.disconnect();
           // selectedBlock.nextConnection.connect(lastBlockAdded.previousConnection);
