--- a/public/app/index.html
+++ b/public/app/index.html
@@ -9,6 +9,7 @@ LANG = LANG_EN_EN;
 
 var cursor_rot=[0,0,0];
 var cursor_trans=[0,0,0];
+var cursor_scale=[1,1,1];
 var colors = {selected:[0.6,0.5,0.2],unselected:[124/256,153/256,96/255],limegreen:[122/256,182/256,69/255]};
 
 re = /l=([^&]*)/g;
