Fix: Scale should reset to XYZ=1,1,1 when you remove a scale block.

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -295,6 +295,7 @@ function myUpdateFunction() {
   var langDropbox = document.getElementById("lang");
   cursor_rot=[0,0,0];
   cursor_move=[0,0,0];
+  cursor_scale=[1,1,1];
   var myVars;
   codeLanguage = $('#langDropbox').val();
   if(typeof codeLanguage != 'string') 
