Also allow insertion of blocks by XML string without being inside a <xml></xml> element. Some code simplifications, and a fix to number input from CLI or shortcut key.

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -138,6 +138,10 @@ $('#inputPane').hide();
 function createBlockAtCursor(xmlStr){
 // create block after selection and select that block
 // when empty, just paste block:
+  if(xmlStr.substring(0,5) !== '<xml>') {
+    xmlStr = '<xml>'+xmlStr+'</xml>';
+  }
+
   if(Blockly.mainWorkspace.getTopBlocks().length == 0)
   {
     try {
